# imguiclientserver

./: .gitignore  CMakeLists.txt  README.md
src/: ClientList.cpp  ClientList.h  ImGuiRenderer.cpp  ImGuiRenderer.h  main.cpp  server.cpp  server.h
src/client/: main.cpp
